--- a/package.json
+++ b/package.json
@@ -21,6 +21,18 @@
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1"
   },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  },
   "jest": {
     "testEnvironment": "jsdom",
     "globals": {
