--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
   "author": "chip long",
   "license": "ISC",
   "scripts": {
-    "test": "jest"
+    "test": "jest",
+    "build": "webpack"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.7",
+    "@faker-js/faker": "^7.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -18,8 +20,11 @@
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "babel-loader": "^9.1.0",
     "jest": "^29.3.1",
-    "jest-environment-jsdom": "^29.3.1"
+    "jest-environment-jsdom": "^29.3.1",
+    "webpack": "^5.75.0",
+    "webpack-cli": "^5.0.1"
   },
   "browserslist": {
     "production": [
