--- a/package.json
+++ b/package.json
@@ -3,28 +3,31 @@
   "version": "1.0.0",
   "description": "Appointments system",
   "main": "index.js",
-  "keywords": [],
+  "scripts": {
+    "build": "webpack",
+    "test": "jest"
+  },
+  "repository": {
+    "type": "git",
+    "url": "example.com"
+  },
   "author": "chip long",
   "license": "ISC",
-  "scripts": {
-    "test": "jest",
-    "build": "webpack"
-  },
-  "dependencies": {
-    "@babel/runtime": "^7.20.7",
-    "@faker-js/faker": "^7.6.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0"
-  },
   "devDependencies": {
     "@babel/plugin-transform-runtime": "^7.19.6",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
+    "@faker-js/faker": "^7.6.0",
     "babel-loader": "^9.1.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.1"
+  },
+  "dependencies": {
+    "@babel/runtime": "^7.20.7",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "browserslist": {
     "production": [
