--- a/package.json
+++ b/package.json
@@ -47,7 +47,8 @@
       "IS_REACT_ACT_ENVIRONMENT": true
     },
     "setupFilesAfterEnv": [
-      "./test/domMatchers.js"
+      "./test/domMatchers.js",
+      "./test/globals.js"
     ],
     "restoreMocks": true
   }
