--- a/package.json
+++ b/package.json
@@ -3,9 +3,13 @@
   "version": "1.0.0",
   "description": "Appointments system",
   "main": "index.js",
+  "proxy": "http://localhost:3000",
   "scripts": {
     "build": "webpack",
-    "test": "jest"
+    "build-server": "webpack --config webpack-server.config.js",
+    "serve": "node dist/server/server.js",
+    "test": "jest",
+    "test-server": "jest --config server/jest.json"
   },
   "repository": {
     "type": "git",
@@ -19,13 +23,21 @@
     "@babel/preset-react": "^7.18.6",
     "@faker-js/faker": "^7.6.0",
     "babel-loader": "^9.1.0",
+    "express": "^4.18.2",
+    "graphql-helix": "^1.13.0",
     "jest": "^29.3.1",
     "jest-environment-jsdom": "^29.3.1",
+    "jest-raw-loader": "^1.0.1",
+    "morgan": "^1.10.0",
+    "raw-loader": "^4.0.2",
+    "supertest": "^6.3.3",
     "webpack": "^5.75.0",
-    "webpack-cli": "^5.0.1"
+    "webpack-cli": "^5.0.1",
+    "webpack-node-externals": "^3.0.0"
   },
   "dependencies": {
     "@babel/runtime": "^7.20.7",
+    "graphql": "^16.6.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
@@ -49,6 +61,10 @@
     "setupFilesAfterEnv": [
       "./test/domMatchers.js",
       "./test/globals.js"
+    ],
+    "testPathIgnorePatterns": [
+      "/node_modules/",
+      "/server/"
     ],
     "restoreMocks": true
   }
